test/compflags/ferguson/default-type-prints-generic.good
default-type-prints-generic.chpl:1: In function 'error':
default-type-prints-generic.chpl:3: error: Cannot assign to int(64) from real(64)
  default-type-prints-generic.chpl:6: called as error(a: int(64), b: uint(64), c: bool, d: real(64), e: imag(64), f: complex(128))
